--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/mongodb-adapter": "^2.0.10",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
